@@ -102,6 +102,8 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #2153: Supporting unquoted cookies with spaces.
+
       - The REQUEST no longer accepts holds after it has been closed.
 
       - Five.browser.metaconfigure.page didn't protect names from interface
